# unity-cpp-network

./: CMakeLists.txt  LICENSE  README.md
Client/: CMakeLists.txt  main.cpp
ClientPlugin/: CMakeLists.txt  EntityManager.h  NetworkClient.cpp  NetworkClient.h  RingBuffer.h  plugin.cpp
Common/: Protocol.h
Server/: CMakeLists.txt  GameWorld.cpp  GameWorld.h  NetworkServer.cpp  NetworkServer.h  main.cpp
UnityClient/unity-cpp-network/Assets/: UserChoices.choices
UnityClient/unity-cpp-network/Assets/Materials/: Black.mat  Blue.mat  Red.mat
UnityClient/unity-cpp-network/Assets/Prefabs/: Player.prefab  SimpleEntity.prefab
UnityClient/unity-cpp-network/Assets/Scenes/: SampleScene.unity
UnityClient/unity-cpp-network/Assets/Scripts/: EntityInterpolator.cs  NetworkManager.cs  OrbitCamera.cs  PredictionSystem.cs  PurposeController.cs  PurposeInput.cs  PurposeInterop.cs  PurposeNetworkClient.cs  PurposeNetworkUI.cs  PurposePlayer.cs
UnityClient/unity-cpp-network/Assets/Settings/: UniversalRenderPipelineGlobalSettings.asset
UnityClient/unity-cpp-network/ProjectSettings/: ProjectSettings.asset
